--- a/web/modules/custom/guestbook/css/guestbook.styles.css
+++ b/web/modules/custom/guestbook/css/guestbook.styles.css
@@ -171,3 +171,65 @@
   color: #544d42;
   text-decoration: none;
   }
+  
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: #fff;
+  padding: 20px 30px;
+  border-radius: 8px;
+  box-shadow: 0 4px 15px rgba(0,0,0,0.3);
+  z-index: 1001;
+  display: none; /* спочатку ховаємо */
+}
+
+.modal-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  backdrop-filter: blur(4px);
+  background: rgba(0,0,0,0.3);
+  z-index: 1000;
+  display: none; /* спочатку ховаємо */
+}
+
+#confirm-delete, #cancel-delete {
+  margin: 5px;
+  padding: 6px 12px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+#confirm-delete {
+  background-color: #d9534f;
+  color: white;
+}
+
+#cancel-delete {
+  background-color: #6c757d;
+  color: white;
+}
+
+.admin-buttons .delete-link {
+  text-decoration: none;
+  font-size: 14px;
+  color: #fffefc;
+  background-color: #b8976a;
+  border-radius: 8px;
+  padding: 17px 15px;
+  cursor: pointer;
+  display: inline-block;
+  transition: all 0.3s ease;
+  border: none; /* прибираємо дефолтний border кнопки */
+}
+
+.admin-buttons .delete-link:hover {
+  color: #544d42;
+  text-decoration: none;
+}
+
